--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@fontsource/roboto": "^5.2.6",
+    "@fseehawer/react-circular-slider": "^3.2.7",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "react": "^19.1.0",
+    "react-circular-slider": "^1.0.12",
     "react-dom": "^19.1.0",
     "three": "^0.178.0"
   },
